# Qt

Base_moduls_Qt/: CMakeLists.txt  main.cpp
